--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,9 @@
          }
       </style>
       <meta charset="utf-8">
-      <title>Build A Blog</title>
+      <title>Blogz</title>
    </head>
    <body>
-      <div class="">
-         <a href="/blog">Main Blog Page</a>
-         <a href="/newpost">Add a Blog Entry</a>
-      </div>
       {% block content %}
       {% endblock %}
    </body>
