modified main, base, blog, newpost and signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
          .error {
             color: red;
          }
+
+         .align_R {
+            text-align: right;
+         }
       </style>
       <meta charset="utf-8">
       <title>Blogz</title>
