--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="align_R">
+   <a href="/logout">Logout</a>
+</div>
 <h1>Build a Blog</h1>
 <div>
    {% for blog in blogList: %}
