--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="align_R">
+   <a href="/logout">Logout</a>
+</div>
 <h1>Add a Blog Entry</h1>
 <form action="/addBlog" method="post">
    {% with messages = get_flashed_messages() %}
