modified files main, base, blog, login, newpost, signup and singleBlog

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
+{% extends "blog_base.html" %}
 {% block content %}
-<div class="align_R">
-   <a href="/logout">Logout</a>
-</div>
+
 <h1>Build a Blog</h1>
 <div>
    {% for blog in blogList: %}
