--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
+{% extends "logSign_base.html" %}
 {% block content %}
+
 <h1>Login</h1>
 <form action="/login" method="post">
    <p class="error">{{userN_error}}</p>
