--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends "logSign_base.html" %}
 {% block content %}
+
 <h1>Sign Up</h1>
 <form action="" method="post">
    <p class="error">{{signUp_user_error}}</p>
    <p class="error">{{signUp_pass_error}}</p>
    <p class="error">{{signUp_vpass_error}}</p>
+   <p class="error">{{signUp_invalid_error}}</p>
    <table>
       <tr>
          <td><label for="username">Username:</label></td>
