--- a/templates/singleBlog.html
+++ b/templates/singleBlog.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
+{% extends "blog_base.html" %}
 {% block content %}
+
 {% for blog in indBlog: %}
 <h1>{{blog.title}}</h1>
 <p>{{blog.body}}</p>
