modified files main, blog_base, index and logSign_base

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -12,6 +12,15 @@
          .align_R {
             text-align: right;
          }
+
+         .usernameBox {
+            width: 200px;
+            margin: 0 auto;
+         }
+
+         .setUnderline {
+            text-decoration: underline;
+         }
       </style>
       <meta charset="utf-8">
       <title>Blogz</title>
