--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,5 +1,18 @@
-{% extends "blog_base.html" %}
+{% extends "base.html" %}
 {% block content %}
+
+<div>
+   <div class="navSide_L">
+      <a href="/index">Home</a>
+   </div>
+   <div class="navSide_R">
+      {% if sessionCheck == "True" %}
+      <a class="rightNav2L" href="/logout">Logout</a>
+      {% else %}
+      <a class="rightNav2L" href="/login">Login</a>
+      {% endif %}
+   </div>
+</div>
 
 <h1>Build a Blog</h1>
 <div>
