--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,29 @@
-{% extends "blog_base.html" %}
+{% extends "base.html" %}
 {% block content %}
 
+<div>
+   <div class="navSide_L">
+      <span>
+         <a class="unClickable" href="/index">Home</a> / <a href="/blog">Blogs</a>
+      </span>
+   </div>
+   <div class="navSide_R">
+      {% if sessionCheck == "True" %}
+      <a class="rightNav2L" href="/logout">Logout</a>
+      {% else %}
+      <a class="rightNav2L" href="/login">Login</a>
+      {% endif %}
+   </div>
+</div>
+
+
 <h1>Home</h1>
+
 <div class="usernameBox">
    <strong><p class="setUnderline">Users in the blog</p></strong>
 
    {% for user in all_users %}
-   <p>{{loop.index}}. {{user.username}}</p>
+   <p>{{loop.index}}. <a href="/blog?user={{user.id}}">{{user.username}}</a></p>
 
    {% endfor %}
 </div>
