--- a/templates/singleBlog.html
+++ b/templates/singleBlog.html
@@ -17,8 +17,10 @@
 </div>
 
 {% for blog in indBlog: %}
-<h1>{{blog.title}}</h1>
-<p>{{blog.body}}</p>
+<div class="blogContainer">
+   <h1>{{blog.title}}</h1>
+   <p>{{blog.body}}</p>
+</div>
 {% endfor %}
 
 {% endblock %}
