removed addblog route from main and into view folder, reworked get_blogList func

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -15,7 +15,7 @@
       {% endif %}
    </div>
 </div>
-<div>
+<div class="blogContainer">
    <h1>Build a Blog</h1>
    {% if sessionCheck == "True" %}
    <p><a href="/newpost"><button>Create New Blog</button></a></p>
@@ -23,6 +23,7 @@
    {% for blog in blogList: %}
    <a href="/blog?id={{blog.id}}">{{blog.title}}</a>
    <p>{{blog.body}}</p>
+   <p>Posted by: {{blog.username}}</p>
    <hr>
    {% endfor %}
 </div>
